Ajuste no fluxo de navegação

--- a/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
+++ b/src/app/pages/lote/cadastrar-lote/cadastrar-lote.component.html
@@ -1,4 +1,3 @@
-<div class="container">
   <form class="container-sm p-4 mt-5 bg-white" [formGroup]="formulario" (ngSubmit)="cadastrar()">
 
     <h2>Cadastrar Lote</h2>
@@ -61,12 +60,14 @@
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <a href="lotes" class="btn btn-secondary entrar col-12">Limpar</a>
+        <button type="reset" class="btn btn-primary entrar col-12">Limpar</button>
       </div>
       <div class="form-group col-md-6">
         <button type="submit" class="btn btn-success entrar col-12">Cadastrar</button>
       </div>
     </div>
-  </form>
+    <div style="padding: 0;" class="form-group col-md-12">
+      <a style="width: 100%; margin: 0;" href="/dashboard-admin" class="btn btn-secondary entrar"><i class="pi pi-arrow-left"></i> Voltar</a>
+    </div>
 
-</div>
+  </form>
