--- a/src/app/seguranca/login-form/login-form.component.html
+++ b/src/app/seguranca/login-form/login-form.component.html
@@ -1,3 +1,7 @@
+<nav class="navbar navbar-dark sticky-top bg-success flex-md-nowrap p-0 shadow">
+  <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/">IMUNO</a>
+</nav>
+
 <div class="container">
   <div class="card text-center" style="width: 18rem; margin: 50px;">
     <div class="card-body">
@@ -7,13 +11,21 @@
           <div class="form-label-group">
             <label for="inputEmail" style="float: left;">E-mail: </label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus
-              formControlName="login">
+              formControlName="login" [class]="(submitted && formulario.get('login').errors) ||
+              (formulario.get('login').errors && formulario.get('login').dirty) ? 'is-invalid' :
+              formulario.get('login').dirty ? 'is-valid' : ''">
+            <div *ngIf="formulario.get('login').errors?.required" class="invalid-feedback">E-mail é
+              obrigatório</div>
           </div>
           <br>
           <div class="form-label-group">
             <label for="inputPassword" style="float: left;">Senha: </label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required
-            formControlName="senha">
+              formControlName="senha" [class]="(submitted && formulario.get('login').errors) ||
+            (formulario.get('login').errors && formulario.get('login').dirty) ? 'is-invalid' :
+            formulario.get('login').dirty ? 'is-valid' : ''">
+            <div *ngIf="formulario.get('login').errors?.required" class="invalid-feedback">Senha é
+              obrigatório</div>
           </div>
           <br>
           <button class="btn btn-success entrar" type="submit" style="width: 100%; margin-left: 0px;">Entrar</button>
