--- a/src/app/pages/tabela-lotes/tabela-lotes.component.html
+++ b/src/app/pages/tabela-lotes/tabela-lotes.component.html
@@ -1,37 +1,36 @@
-<div class="container">
-
-  <div class="container-sm p-4 mt-5 bg-white">
-    <div>
-      <a href="lote" style="float: left;" class="btn btn-secondary entrar col-4">Cadastrar Lote</a>
-    </div>
-
-  <br>
-  <br>
-
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">Código</th>
-          <th scope="col">Vacina</th>
-          <th scope="col">Data de entrada</th>
-          <th scope="col">Data de Fabricação</th>
-          <th scope="col">Data de Validade</th>
-          <th scope="col">Data de Quantidade</th>
-          <th scope="col">Editar</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let lote of lotes">
-          <th scope="row">{{lote.codigo}}</th>
-          <th >{{lote.vacina.nome}}</th>
-          <td type="date">{{lote.dataEntrada}}</td>
-          <td type="date">{{lote.dataFabricacao}}</td>
-          <td type="date">{{lote.dataValidade}}</td>
-          <td type="date">{{lote.quantidade}}</td>
-          <td><a href="lote/{{lote.id}}"> <i class="pi pi-pencil"></i> </a></td>
-        </tr>
-      </tbody>
-    </table>
-
+<div class="container-sm p-4 mt-5 bg-white">
+  <div class="d-flex">
+    <a style="margin-right: 15px;" href="/dashboard-admin" class="btn btn-secondary entrar col-6"><i
+        class="pi pi-arrow-left"></i> Voltar</a>
+    <a href="lote" class="btn btn-success entrar col-6">Cadastrar Lote</a>
   </div>
+
+  <br>
+  <br>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">Código</th>
+        <th scope="col">Vacina</th>
+        <th scope="col">Data de entrada</th>
+        <th scope="col">Data de Fabricação</th>
+        <th scope="col">Data de Validade</th>
+        <th scope="col">Data de Quantidade</th>
+        <th scope="col">Editar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let lote of lotes">
+        <th scope="row">{{lote.codigo}}</th>
+        <th>{{lote.vacina.nome}}</th>
+        <td type="date">{{lote.dataEntrada}}</td>
+        <td type="date">{{lote.dataFabricacao}}</td>
+        <td type="date">{{lote.dataValidade}}</td>
+        <td type="date">{{lote.quantidade}}</td>
+        <td><a href="lote/{{lote.id}}"> <i class="pi pi-pencil"></i> </a></td>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
