--- a/src/app/pages/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/pages/dashboard-admin/dashboard-admin.component.html
@@ -1,9 +1,8 @@
 <div class="container">
   <form class="container-sm p-4 mt-5  bg-white">
     <div class="form-row">
-      <button type="button" routerLink="/posto" class="btn btn-success btn-lg btn-block">Cadastrar Posto</button>
-            <button type="button" routerLink="/posto/1" class="btn btn-success btn-lg btn-block">Editar Posto</button>
-      <button type="button" routerLink="/funcionario" class="btn btn-success btn-lg btn-block">Cadastrar Funcionário</button>
+      <button type="button" routerLink="/postos" class="btn btn-success btn-lg btn-block">Postos</button>
+      <button type="button" routerLink="/funcionarios" class="btn btn-success btn-lg btn-block">Funcionários</button>
       <button type="button" routerLink="/vacinas" class="btn btn-success btn-lg btn-block">Vacinas</button>
       <button type="button" routerLink="/lotes" class="btn btn-success btn-lg btn-block">Lotes</button>
     </div>
