--- a/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
+++ b/src/app/pages/funcionario/cadastrar-funcionario/cadastrar-funcionario.component.html
@@ -140,7 +140,7 @@
     </div>
   </div>
   <div style="padding: 0;" class="form-group col-md-12">
-    <a style="width: 100%; margin: 0;" href="/dashboard-admin" class="btn btn-secondary entrar"><i
+    <a style="width: 100%; margin: 0;" href="/funcionarios" class="btn btn-secondary entrar"><i
         class="pi pi-arrow-left"></i> Voltar</a>
   </div>
 
